Another attempt to fix background image not showing on Heroku

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -458,7 +458,7 @@ div.cheatsheet {
   color:black;
 }
 .home{
-  background: url('bulletin5.jpg') no-repeat;
+  background: url(image_path('bulletin5.jpg')) no-repeat;
   background-size:100%;
   width:100%;
   height:100%;
